helm/varnish/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: varnish-frontend-ingress
  namespace: production
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.org/client-max-body-size: "4m"
    nginx.org/proxy-connect-timeout: "120s"
    nginx.org/proxy-read-timeout: "120s"
    nginx.org/proxy-buffers: "8 16k"
    nginx.org/proxy-buffer-size: "16k"
    nginx.org/proxy-busy-buffers-size: "64k"
    nginx.org/websocket-services: "websocket-service"
    nginx.org/server-snippets: |
      if ($http_x_forwarded_proto = 'http') {
          return 308 https://$host$request_uri;
      }

      location ^~ /socket.io {
          proxy_pass http://production-varnish-frontend-ingress-healthycommunitiesnc.org-canon-site-3300;
          proxy_pass_request_headers on;
          proxy_http_version 1.1;
          proxy_set_header Host $host;
          proxy_set_header Upgrade $http_upgrade;
          proxy_set_header Connection "upgrade";
          proxy_redirect off;
          proxy_set_header X-Real-IP $remote_addr;
          proxy_set_header X-NginX-Proxy true;
          proxy_set_header X-Forwarded-Host $host;
          proxy_set_header X-Forwarded-Server $host;
          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;

          rewrite  ^/socket/(.*)  /$1 break; #used to send request to base url
      }
    nginx.org/location-snippets: |
      add_header Access-Control-Allow-Origin 'https://healthycommunitiesnc.org';

      proxy_pass_header         Access-Control-Allow-Origin;
      proxy_pass_header         Access-Control-Allow-Methods;
      proxy_pass_header         Access-Control-Allow-Headers;

      # proxy_set_header          Host $host;
      proxy_set_header          X-Forwarded-For $proxy_add_x_forwarded_for;
      proxy_set_header          Upgrade $http_upgrade;
      proxy_set_header          Connection "upgrade";
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - healthycommunitiesnc.org
    secretName: varnish-frontend-ingress-tls
  rules:
  - host: healthycommunitiesnc.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: canon-site-cache
            port:
              number: 80
      - path: /data
        pathType: Prefix
        backend:
          service:
            name: canon-site
            port:
              number: 3300
      - path: /ws
        pathType: Prefix
        backend:
          service:
            name: websocket-service
            port:
              number: 8080
